# HyperCowork

./: BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  README.md  install.ps1  preview.html
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/cost-estimator/: Cargo.toml
crates/cost-estimator/src/: lib.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: briefs.rs  inbox.rs  instance.rs  kanban.rs  lib.rs  todo.rs
crates/delivery/: Cargo.toml
crates/delivery/src/: lib.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/hermes/: Cargo.toml
crates/hermes/src/: lib.rs
crates/installer/: Cargo.toml
crates/installer/src/: main.rs
crates/media/: Cargo.toml
crates/media/src/: lib.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs  main.rs
crates/server/: Cargo.toml
crates/server/src/: errors.rs  handlers.rs  lib.rs  main.rs  server.rs
crates/slack/: Cargo.toml
crates/slack/src/: lib.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: lib.rs
crates/text/: Cargo.toml
crates/text/src/: lib.rs
packaging/: winget.yaml
