[package]
name = "opencowork-dashboard"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

opencowork-hermes = { path = "../hermes" }
opencowork-cost-estimator = { path = "../cost-estimator" }
