[package]
name = "hypercowork-dashboard"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

hypercowork-hermes = { path = "../hermes" }
hypercowork-cost-estimator = { path = "../cost-estimator" }
