[package]
name = "opencowork-installer"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
dirs = "5"

opencowork-hermes = { path = "../hermes" }
