[package]
name = "hypercowork-router"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hypercowork-router"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }

hypercowork-telegram = { path = "../telegram" }
hypercowork-slack = { path = "../slack" }
hypercowork-delivery = { path = "../delivery" }
hypercowork-text = { path = "../text" }

clap = { version = "4", features = ["derive", "env"] }
toml = { workspace = true }
